2006-12-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base.py (KickstartCommand.__call__):  Add a function to
	set all the attributes of a command object at once.
	(BaseHandler._registerHandler):  Don't need to do so much goofy stuff
	to register a command handler anymore.

	* pykickstart/version.py (returnClassForVersion):  Add a function to
	return the class matching a given kickstart syntax version.  This does
	not return an instance of that class.

2006-12-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py:  Add named arguments to __init__
	functions for all command handlers.
	* pykickstart/commands/fc6.py:  Likewise.

	* pykickstart/commands/fc4.py:  Various minor fixes to default
	arguments and __str__ methods throughout.

2006-12-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py (CommandLang):  Add lang attribute.

	* pykickstart/commands/fc5.py (FC5Handler):  Import from the
	FC4Handler.

2006-12-11  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py:  Added first run at data and command
	handling support for Fedora Core 4.

	* pykickstart/commands/fc4.py (KickstartLogVolData,
	KickstartNetworkData, KickstartPartData, KickstartRaidData,
	KickstartVolGroupData, KickstartZFCPData):  Add named arguments to
	__init__ functions to make creating objects programatically easier.
	* pykickstart/commands/fc6.py (KickstartDmRaidData,
	KickstartIscsiData, KickstartRepoData, KickstartUserData):  Likewise.

2006-12-11  Chris Lumens  <clumens@redhat.com>

	* validator/ksvalidator:  Update to handle multiple versions.

	* pykickstart/parser.py (Packages.add):  Move Parser.addPackages here
	since this seems like a sensible method for the Packages object to
	have.

	* pykickstart/version.py (makeHandler):  Add a function to create the
	right handler for a given syntax version.
	(stringToVersion):  Add a function to convert string versions into
	integer versions.
