@@ -6,4 +6,5 @@ setup(name='pykickstart', version='0.39',
       description='Python module for manipulating kickstart files',
       author='Chris Lumens', author_email='clumens@redhat.com',
       url='http://fedoraproject.org/wiki/pykickstart',
-      scripts=['validator/ksvalidator'], packages=['pykickstart'])
+      scripts=['validator/ksvalidator'],
+      packages=['pykickstart', 'pykickstart.commands'])
